piece motion impact re-factoring