@@ -1,8 +1,5 @@
 package com.agutsul.chess.rule.impact.motion;
 
-import static java.util.Collections.unmodifiableCollection;
-import static java.util.stream.Collectors.toList;
-
 import java.util.Collection;
 import java.util.stream.Stream;
 
@@ -14,7 +11,6 @@ import com.agutsul.chess.board.Board;
 import com.agutsul.chess.color.Color;
 import com.agutsul.chess.line.Line;
 import com.agutsul.chess.piece.Piece;
-import com.agutsul.chess.piece.algo.Algo;
 import com.agutsul.chess.piece.algo.LinePositionAlgoAdapter;
 import com.agutsul.chess.piece.algo.MoveLineAlgoAdapter;
 import com.agutsul.chess.piece.algo.MovePieceAlgo;
@@ -24,17 +20,12 @@ public final class PieceMotionLineImpactRule<COLOR extends Color,
                                              PIECE extends Piece<COLOR> & Movable & Lineable>
         extends AbstractMotionImpactRule<COLOR,PIECE,PieceMotionImpact<COLOR,PIECE>> {
 
-    private final Algo<PIECE,Collection<Position>> algo;
-
     public PieceMotionLineImpactRule(Board board,
                                      MovePieceAlgo<COLOR,PIECE,Line> algo) {
-        super(board);
-        this.algo = new LinePositionAlgoAdapter<>(new MoveLineAlgoAdapter<>(board, algo));
-    }
 
-    @Override
-    protected Collection<Calculatable> calculate(PIECE piece) {
-        return unmodifiableCollection(algo.calculate(piece));
+        super(board, new LinePositionAlgoAdapter<>(
+                new MoveLineAlgoAdapter<>(board, algo)
+        ));
     }
 
     @Override
@@ -44,7 +35,7 @@ public final class PieceMotionLineImpactRule<COLOR extends Color,
         var impacts = Stream.of(positions)
                 .flatMap(Collection::stream)
                 .map(calculated -> new PieceMotionImpact<>(piece, (Position) calculated))
-                .collect(toList());
+                .toList();
 
         return impacts;
     }
